--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second ever github repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+
+    <div>
+        <h3> my first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dignissimos molestiae cupiditate repellat distinctio, magnam mollitia recusandae ea adipisci commodi similique animi error harum? Esse eveniet possimus quia provident odio!</p>
+
+
+    </div>
+    <div>
+        <h3> my first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dignissimos molestiae cupiditate repellat distinctio, magnam mollitia recusandae ea adipisci commodi similique animi error harum? Esse eveniet possimus quia provident odio!</p>
+
+
+    </div>
+    <div>
+        <h3> my first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dignissimos molestiae cupiditate repellat distinctio, magnam mollitia recusandae ea adipisci commodi similique animi error harum? Esse eveniet possimus quia provident odio!</p>
+
+
+    </div>
 </body>
 </html>
