added the second and therd blog

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
     </div>
     <div>
-        <h3> my first website</h3>
+        <h3> my second website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dignissimos molestiae cupiditate repellat distinctio, magnam mollitia recusandae ea adipisci commodi similique animi error harum? Esse eveniet possimus quia provident odio!</p>
 
 
     </div>
     <div>
-        <h3> my first website</h3>
+        <h3> my therd website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dignissimos molestiae cupiditate repellat distinctio, magnam mollitia recusandae ea adipisci commodi similique animi error harum? Esse eveniet possimus quia provident odio!</p>
 
 
