added to push code

--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
         <h3> my therd website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dignissimos molestiae cupiditate repellat distinctio, magnam mollitia recusandae ea adipisci commodi similique animi error harum? Esse eveniet possimus quia provident odio!</p>
 
+    </div>
+    <div>
+        <h3>you to push incremental code</h3>
+        <ul>
+            <li> git add .</li>
+            <li> git commit -m'add a minigful commit massege"</li>
+            <li> git push</li>
+
+
+        </ul>
+
 
     </div>
 </body>
