kim  with a dim'

--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
             <li> git add .</li>
             <li> git commit -m'add a minigful commit massege"</li>
             <li> git push</li>
-
-
         </ul>
+    </div>
+    <div>
+        <h3>kim kim khai everyday one singale dim</h3>
+        <img src="download.jfif" alt="">
+
+
 
 
     </div>
