--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <div>
         <h3>kim kim khai everyday one singale dim</h3>
         <img src="download.jfif" alt="">
+        <br>
+        <br>
+        
+        <img src="download (1).jfif" alt="">
 
 
 
