--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <img src="download.jfif" alt="">
         <br>
         <br>
-        
+
         <img src="download (1).jfif" alt="">
-
-
-
+        <br>
+        <br>
 
     </div>
+    <button>see more photo</button>
 </body>
 </html>
