--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
 
     </div>
     <button>see more photo</button>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod beatae sapiente, rem deleniti velit molestias cupiditate eius doloremque odit! Odio cupiditate repellat nostrum dolorem nulla neque eveniet laudantium sequi? Maiores.</p>
 </body>
 </html>
